# mllab

./: .gitignore  README.md  pyproject.toml
mllab/knn/: Abalone.ipynb
mllab/linear_regression/: Diabetes.ipynb  Taxi.ipynb
mllab/llm/francais/data/: __init__.py  prompts.py
mllab/llm/francais/model/: __init__.py  assistante.py  tense.py
mllab/llm/francais/notebook/: Assistante.ipynb
tests/llm/francais/model/: test_assistante.py
